--- a/src/main/resources/Styles.CSS
+++ b/src/main/resources/Styles.CSS
@@ -63,6 +63,10 @@
         -fx-background-color: #dedcde;
     }
 
+    .userZoneBackground{
+        -fx-background-image: url("design/userZone");
+    }
+
     .myTextField{
       -fx-border-color: transparent;
       -fx-border-width: 0 0 0 0;
