--- a/src/main/resources/fxml/AdminMenu/AdminMenu.fxml
+++ b/src/main/resources/fxml/AdminMenu/AdminMenu.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.AdminMenuController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="userZoneBackground" stylesheets="@../../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.AdminMenuController">
    <children>
-       <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
+       <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0" styleClass="myMenuBar">
            <menus>
                <Menu mnemonicParsing="false" text="option">
                   <items>
@@ -29,8 +29,8 @@
                </Menu>
            </menus>
        </MenuBar>
-       <Button layoutX="26.0" layoutY="227.0" prefHeight="27.0" prefWidth="190.0" text="edit personal info" onMouseClicked="#editPersonalInfo"> </Button>
+       <Button layoutX="26.0" layoutY="227.0" onMouseClicked="#editPersonalInfo" prefHeight="27.0" prefWidth="190.0" text="edit personal info"> </Button>
       <ImageView fx:id="adminImage" fitHeight="161.0" fitWidth="200.0" layoutX="315.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true" />
-      <Label layoutX="26.0" layoutY="39.0" prefHeight="161.0" prefWidth="190.0" fx:id="personalInfo" />
+      <Label fx:id="personalInfo" layoutX="26.0" layoutY="39.0" prefHeight="161.0" prefWidth="190.0" />
    </children>
 </AnchorPane>
