--- a/src/main/resources/fxml/BuyerMenu/BuyerMenu.fxml
+++ b/src/main/resources/fxml/BuyerMenu/BuyerMenu.fxml
@@ -4,10 +4,10 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.BuyerMenu.BuyerMenuController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="userZoneBackground" stylesheets="@../../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.BuyerMenu.BuyerMenuController">
    <children>
    
-       <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
+       <MenuBar prefHeight="25.0" prefWidth="1280.0" styleClass="myMenuBar">
            <menus>
                <Menu mnemonicParsing="false" text="option">
                   <items>
@@ -21,7 +21,7 @@
                    <MenuItem mnemonicParsing="false" onAction="#viewCart" text="View Cart" />
                    <MenuItem mnemonicParsing="false" onAction="#viewDiscountCodes" text="View Discount Codes" />
                    <MenuItem mnemonicParsing="false" onAction="#viewOrders" text="View Orders" />
-                   <MenuItem text="view Requests"     onAction="#viewRequests" ></MenuItem>
+                   <MenuItem onAction="#viewRequests" text="view Requests" />
                </Menu>
            </menus>
        </MenuBar>
