--- a/src/main/resources/fxml/SellerMenu/SellerMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerMenu.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.SellerMenuController.SellerMenuController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="userZoneBackground" stylesheets="@../../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.SellerMenuController.SellerMenuController">
    <children>
-       <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
+       <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0" styleClass="myMenuBar">
            <menus>
                <Menu mnemonicParsing="false" text="option">
                   <items>
@@ -19,7 +19,7 @@
                    <MenuItem mnemonicParsing="false" onAction="#viewSalesHistory" text="View Sales History" />
                    <MenuItem mnemonicParsing="false" onAction="#viewShop" text="Shop" />
                    <MenuItem mnemonicParsing="false" onAction="#viewDiscounts" text="Discounts" />
-                   <MenuItem text="viewRequests"     onAction="#viewRequests" ></MenuItem>
+                   <MenuItem onAction="#viewRequests" text="viewRequests" />
                </Menu>
                <Menu text="manage">
                    <MenuItem mnemonicParsing="false" onAction="#addProduct" text="Add Product" />
